src/scss/sections/_create-bulletin.scss
$header-nav-height: 56px;
$bulletin-height: calc(100vh - $header-nav-height);
$compact-map-height: 300px;
// Layout
.create-bulletin {
    display: flex;
    align-items: stretch;
    height: $bulletin-height;
    background: white;
}

.create-bulletin__sidebar,
.create-bulletin__region-form {
    height: $bulletin-height;
    overflow-y: scroll;
    overflow-x: hidden;
}

.create-bulletin__map-container, .create-bulletin__map {
    height: $bulletin-height;
}

.create-bulletin__map-container--am-pm .create-bulletin__map {
    height: calc($bulletin-height / 2);
}

// Sidebar
$sidebar-width: 256px;
$sidebar-padding: $space-4;
$sidebar-border: 1px solid $gray-300;

.create-bulletin__sidebar {
    width: $sidebar-width;
    flex: 0 0 $sidebar-width;
    border-right: $sidebar-border;
}

.create-bulletin__sidebar-header {
    padding: $sidebar-padding;
    background: white;
}

.create-bulletin__date {
    display: flex;
    justify-content: space-between;
    margin-bottom: $sidebar-padding;
}

.create-bulletin__current-date {
    margin-bottom: 0;
}

.create-bulleting__days-nav {
    margin-top: auto;
}

.create-bulletin__action-buttons {
    margin: $space-3 0 $space-2 0;
    width: 100%;
}

.create-bulletin__action-buttons--small {
    margin: $space-3 0 $space-2 0;
}

// Status
.create-bulletin__status-title {
    display: flex;
    flex-flow: row nowrap;
    justify-content: space-between;
    cursor: pointer;
    i {
        display: none;
    }
    &:hover i {
        display: block;
    }
}

.create-bulletin__bulletin-info {
    font-size: 12px;
    color: $secondary;
    margin: $space-4 0;
    display: flex;
    align-items: center;

    i {
       margin-right: $space-2; 
    }
}

.create-bulletin__bulletin-warning {
    font-size: 12px;
    color: $secondary;
    margin: $space-4 0;
    display: flex;
    align-items: center;

    i {
       margin-right: $space-2; 
    }
}

.create-bulletin__bulletin-alert {
    font-size: 12px;
    font-weight: 600;
    color: $danger;
    margin: $space-4 0;
    display: flex;
    align-items: center;
    cursor: pointer;

    i.icon-left {
        margin-right: $space-2;
    }
    i.icon-right {
        margin-left: $space-2;
    }
}

.create-bulletin__bulletin-status {
    margin-top: $sidebar-padding;
    li {
        display: flex;
        flex-flow: row nowrap;
        justify-content: space-between;
        padding: $space-2 0;
        border-top: $sidebar-border;
        border-bottom: $sidebar-border;
        margin-top: -1px;
    }
}

.create-bulletin__region-dropdown.dropdown-menu.show {
    position: fixed;
    left: 5px !important;
    top: 218px !important;
}

// Regions list

.create-bulletin__region-divider {
    padding: $space-2 $sidebar-padding;
    background: $gray-100;
    border-top: $sidebar-border;
    border-bottom: $sidebar-border;
    display: flex;
    flex-flow: row nowrap;
    justify-content: space-between;
    align-items: center;
}

.foreign {
    cursor: pointer;
}

.region-thumb__actions {
    //opacity: 0;
}

.region-thumb {
    padding-top: $sidebar-padding;
    padding-right: calc($sidebar-padding/2);
    padding-bottom: $sidebar-padding;
    padding-left: $sidebar-padding;
    border-bottom: $sidebar-border;
    background-color: white;
    display: block;
    position: relative;
    color: $black;
    display: flex;
    flex-flow: row nowrap;
    justify-content: space-between;

    &:hover,
    &.region-thumb--active {
        background: $primary-pale;
    }
    &:hover {
        .region-thumb__actions {
            opacity: 1;
        }
    }
}

.region-thumb__avalanche-info {
    display: flex;
    flex-flow: row wrap;
    gap: $space-1;
    align-items: center;
}
.region-thumb__avalanche-problem-icon {
    width: 20px;
    height: 20px;
    border: 1px solid $gray-400;
}

.grid-container {
    display: inline-grid;
    grid-template-columns: 10px 10px;
    grid-template-rows: 10px 10px;
    vertical-align: top;
}

.create-bulletin__default-layout {
    display: flex;
    align-items: stretch;
    height: $bulletin-height;
    width: 100%;
}

.create-bulletin__compact-layout {
    display: flex;
    flex-direction: column-reverse;
    width: 100%;

    .create-bulletin__region-form {
        width: 100%;
        height: calc(100vh - $compact-map-height - $header-nav-height);
    }

    .create-bulletin__map-container, .create-bulletin__map {
        height: $compact-map-height;
    }

    .create-bulletin__map-container--am-pm {
        display: flex;
        flex-direction: row;
    }

    .create-bulletin__map-container--am-pm .create-bulletin__map {
        width: 50%;
    }
}

.create-bulletin__nobulletins {
    display: flex;
    align-items: center; /* Centers items on the cross-axis (typically vertical) */
    justify-content: center; /* Centers items on the main-axis (typically horizontal) */
    flex-direction: column; /* Stack the items vertically */
    margin: $space-4;
    padding: $space-6;
    background-color: $albina-blue-pale;
    color: $albina-blue-dark;
    text-align: center;
    font-size: 14px;

    .ph {
        font-size: 32px;
    }

    p {
        margin-top: $space-6;
    }
  }

// Responsive layout
@include media-breakpoint-down(md) {
    .create-bulletin__sidebar {
        width: 100%;
    }

    .create-bulletin__region-form {
        min-width: 0 !important;
    }
}

